--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_en_GB.json
@@ -758,5 +758,6 @@
   "signup_enum_IN_area_IN-TR": "Tripura",
   "signup_enum_IN_area_IN-UP": "Uttar Pradesh",
   "signup_enum_IN_area_IN-UT": "Uttarakhand",
-  "signup_enum_IN_area_IN-WB": "West Bengal"
+  "signup_enum_IN_area_IN-WB": "West Bengal",
+  "signup_field_add_companyNationalIdentificationNumber_siret_success": "Your update has been processed."
 }
