--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_fr_CA.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_fr_CA.json
@@ -24,6 +24,7 @@
   "signup_field_corporationType": "Type d'entreprise",
   "signup_field_organisation": "Organisation",
   "signup_field_companyNationalIdentificationNumber": "SIRET / SIREN",
+  "signup_field_add_companyNationalIdentificationNumber_siret_success": "Votre mise à jour a bien été prise en compte.",
   "signup_field_sex": "Sexe",
   "signup_field_vat": "Numéro de TVA Intracommunautaire",
   "signup_field_gst": "Numéro de taxe sur les produits et services (GST)",
