--- a/packages/manager/apps/hub/src/dashboard/translations/Messages_de_DE.json
+++ b/packages/manager/apps/hub/src/dashboard/translations/Messages_de_DE.json
@@ -1,5 +1,7 @@
 {
   "manager_hub_dashboard": "Dashboard",
   "manager_hub_dashboard_overview": "Überblick über meine Aktivitäten",
-  "manager_hub_dashboard_services": "Meine Produkte und Dienstleistungen"
+  "manager_hub_dashboard_services": "Meine Produkte und Dienstleistungen",
+  "manager_hub_dashboard_banner_siret_link": "Klicken Sie hier für das Update.",
+  "manager_hub_dashboard_banner_siret": "Um die Qualität Ihrer Daten zu verbessern, müssen wir die SIRET-Nummer Ihres Unternehmens aktualisieren. Diese Aktualisierung dauert nur wenige Sekunden. Bitte nehmen Sie Ihren KBIS zur Hand. "
 }
