--- a/packages/manager/apps/hub/src/dashboard/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/hub/src/dashboard/translations/Messages_pl_PL.json
@@ -1,5 +1,7 @@
 {
   "manager_hub_dashboard": "Dashboard",
   "manager_hub_dashboard_overview": "Przegląd moich projektów",
-  "manager_hub_dashboard_services": "Moje produkty i usługi"
+  "manager_hub_dashboard_services": "Produkty i usługi",
+  "manager_hub_dashboard_banner_siret_link": "kliknij tutaj, aby przeprowadzić aktualizację.",
+  "manager_hub_dashboard_banner_siret": "Prosimy o aktualizację numeru REGON Twojej firmy. Aktualizacja danych zajmie tylko kilka sekund. Sprawdź dane w wyciągu z rejestru handlowego i "
 }
