--- a/packages/manager/modules/pci/src/projects/project/ai-dashboard/onboarding/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/ai-dashboard/onboarding/translations/Messages_pl_PL.json
@@ -1,8 +1,8 @@
 {
-  "pci_ai_dashboard_onboarding_tuto": "Dokumentacja",
+  "pci_ai_dashboard_onboarding_tuto": "Tutoriale",
   "pci_ai_dashboard_onboarding_benefits": "Zalety",
   "pci_ai_dashboard_onboarding_benefits_reversibility_title": "Odwracalność",
-  "pci_ai_dashboard_onboarding_benefits_reversibility_descritpion": "OVHcloud bardzo dużą wagę przykłada do suwerenności danych osobowych i wolności. Możesz odzyskać dane w każdej chwili dzięki standardowym protokołom.",
+  "pci_ai_dashboard_onboarding_benefits_reversibility_descritpion": "OVHcloud bardzo poważnie traktuje suwerenność i wolność danych osobowych. Możesz odzyskać dane w każdej chwili dzięki standardowym protokołom.",
   "pci_ai_dashboard_onboarding_benefits_computing_title": "Moc obliczeniowa",
   "pci_ai_dashboard_onboarding_benefits_computing_descritpion": "Korzystając z uprzemysłowionych centrów danych i zautomatyzowanych wdrożeń, OVHcloud oferuje dużą moc obliczeniową w najlepszej cenie przeznaczoną do analizy danych. ",
   "pci_ai_dashboard_onboarding_benefits_security_title": "Zgodność i bezpieczeństwo danych",
