--- a/packages/manager/modules/pci/src/projects/project/storages/databases/add/command/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/add/command/translations/Messages_pt_PT.json
@@ -2,9 +2,9 @@
   "pci_databases_add_command_close_button": "Fechar",
   "pci_databases_add_command_title": "Encomenda equivalente",
   "pci_databases_add_command_description": "O comando seguinte permite-lhe criar o seu serviço graças à nossa API.",
-  "pci_databases_add_command_description_terraform": "O comando seguinte permite-lhe criar o seu serviço graças à nosso Terraform OVH Provider.",
+  "pci_databases_add_command_description_terraform": "O recurso seguinte permite-lhe criar o seu serviço graças ao nosso Terraform OVH Provider.",
   "pci_databases_add_command_documentation_link": "Clique aqui para aceder à documentação.",
-  "pci_databases_add_command_documentation_link_database_creation": "Mais exemplos sobre GitHub.",
+  "pci_databases_add_command_documentation_link_database_creation": "Mais exemplos sobre o GitHub.",
   "pci_databases_add_command_parameters": "Parâmetros:",
   "pci_databases_add_command_parameters_info": "Mais informações sobre os parâmetros disponíveis:",
   "pci_databases_add_command_parameters_info_description": "Nome do serviço",
