--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/restore/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/restore/translations/Messages_de_DE.json
@@ -4,5 +4,11 @@
   "pci_databases_backups_restore_confirm": "Bestätigen",
   "pci_databases_backups_restore_cancel": "Abbrechen",
   "pci_databases_backups_restore_success": "Die Anfrage zur Wiederherstellung des Backups {{ name }} wurde erfolgreich erstellt.",
-  "pci_databases_backups_restore_error": "Backup konnte nicht wiederhergestellt werden: {{ message }}"
+  "pci_databases_backups_restore_error": "Backup konnte nicht wiederhergestellt werden: {{ message }}",
+  "pci_databases_backups_restore_backup_success": "Die Anfrage zur Wiederherstellung des Backups {{ name }} ({{ date }}) wurde erfolgreich erstellt.",
+  "pci_databases_backups_restore_pit_success": "Die Anfrage zur Wiederherstellung des Dienstes zum Datum {{ date }} wurde erfolgreich erstellt.",
+  "pci_databases_backups_restore_restore_mode_description": "Wählen Sie den Wiederherstellungspunkt aus, von dem aus der Dienst wiederhergestellt wird.",
+  "pci_databases_backups_restore_spec_restore_mode_soonest": "Der aktuellste",
+  "pci_databases_backups_restore_spec_restore_mode_timestamp": "Spezifisches Datum",
+  "pci_databases_backups_restore_spec_restore_mode_backup": "Backup"
 }
