--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/restore/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/restore/translations/Messages_it_IT.json
@@ -4,5 +4,11 @@
   "pci_databases_backups_restore_confirm": "Conferma",
   "pci_databases_backups_restore_cancel": "Annulla",
   "pci_databases_backups_restore_success": "Richiesta di ripristino del backup {{ name }} creata correttamente.",
-  "pci_databases_backups_restore_error": "Impossibile ripristinare il backup: {{ message }}"
+  "pci_databases_backups_restore_error": "Impossibile ripristinare il backup: {{ message }}",
+  "pci_databases_backups_restore_backup_success": "Richiesta di ripristino del backup {{ name }} ({{ date }}) creata correttamente.",
+  "pci_databases_backups_restore_pit_success": "Richiesta di ripristino del servizio alla data {{ date }} creata correttamente.",
+  "pci_databases_backups_restore_restore_mode_description": "Seleziona il punto di ripristino a partire dal quale verrà ripristinato il servizio.",
+  "pci_databases_backups_restore_spec_restore_mode_soonest": "Il più recente",
+  "pci_databases_backups_restore_spec_restore_mode_timestamp": "Data specifica",
+  "pci_databases_backups_restore_spec_restore_mode_backup": "Backup"
 }
