--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/restore/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/restore/translations/Messages_pl_PL.json
@@ -4,5 +4,11 @@
   "pci_databases_backups_restore_confirm": "Zatwierdź",
   "pci_databases_backups_restore_cancel": "Anuluj",
   "pci_databases_backups_restore_success": "Polecenie przywrócenie kopii zapasowej {{name}} zostało utworzone.",
-  "pci_databases_backups_restore_error": "Nie można przywrócić kopii zapasowej: {{message}}."
+  "pci_databases_backups_restore_error": "Nie można przywrócić kopii zapasowej: {{message}}.",
+  "pci_databases_backups_restore_backup_success": "Żądanie przywrócenia kopii zapasowej {{name}} ({{date}}) zostało utworzone.",
+  "pci_databases_backups_restore_pit_success": "Żądanie przywrócenia usługi do daty {{date}} zostało utworzone.",
+  "pci_databases_backups_restore_restore_mode_description": "Wybierz punkt przywracania, z którego usługa zostanie przywrócona.",
+  "pci_databases_backups_restore_spec_restore_mode_soonest": "Ostatni",
+  "pci_databases_backups_restore_spec_restore_mode_timestamp": "Konkretna data",
+  "pci_databases_backups_restore_spec_restore_mode_backup": "Kopia zapasowa"
 }
