fix(pci.data-processing): fix pr comments
datatr-242

Signed-off-by: Gael Leblan <gael.leblan@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/translations/Messages_fr_FR.json
@@ -12,7 +12,7 @@
   "data_processing_notebook_status": "Statut",
   "data_processing_notebook_status_deleted": "Supprimé",
   "data_processing_notebook_status_failed": "Echec",
-  "data_processing_notebook_status_running": "En cours",
+  "data_processing_notebook_status_running": "En service",
   "data_processing_notebook_status_starting": "Démarrage",
   "data_processing_notebook_status_stopped": "Arrêté",
   "data_processing_notebook_status_stopping": "Arrêt",
