--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/containers/translations/Messages_fr_FR.json
@@ -2,5 +2,6 @@
   "pci_projects_project_storages_cold_archives_guides_storage-backup_title": "Tous les guides de stockage et sauvegarde",
   "pci_projects_project_storages_cold_archives_guides_storage-backup_description": "Tous les guides de stockage et sauvegarde",
   "pci_projects_project_storages_cold_archives_guides_public-cloud-create-project_title": "Créer un projet public cloud",
-  "pci_projects_project_storages_cold_archives_guides_public-cloud-create-project_description": "Créer un projet public cloud"
+  "pci_projects_project_storages_cold_archives_guides_public-cloud-create-project_description": "Créer un projet public cloud",
+  "pci_projects_project_storages_cold_archives_add_container_success_secret_label": "Votre clé secrète S3 :"
 }
