--- a/packages/manager/modules/iam/src/components/policies/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/iam/src/components/policies/translations/Messages_fr_FR.json
@@ -5,7 +5,5 @@
   "iam_policies_datagrid_column_identities": "Nombre d'identités",
   "iam_policies_datagrid_column_name": "Nom",
   "iam_policies_datagrid_column_resources": "Nombre d'actions",
-  "iam_policies_datagrid_topbar_create_policy": "Créer une politique",
-  "iam_policies_error_cursor": "Cette page n'existe pas",
-  "iam_policies_error_data": "Une erreur est survenue lors de la récupération de vos données : {{ error }}"
+  "iam_policies_datagrid_topbar_create_policy": "Créer une politique"
 }
