fix(i18n): add missing translations [CDS 2173]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/add/command/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/add/command/translations/Messages_en_GB.json
@@ -23,7 +23,7 @@
   "pci_databases_add_command_parameters_info_terraform_plan": "Selected plan",
   "pci_databases_add_command_parameters_info_terraform_flavor": "Selected features",
   "pci_databases_add_command_parameters_info_terraform_disk_size": "Storage capacity",
-  "pci_databases_add_command_parameters_info_terraform_nodes": "List of nodes",
+  "pci_databases_add_command_parameters_info_terraform_nodes": "Node list",
   "pci_databases_add_command_parameters_info_terraform_nodes_region": "Selected location",
   "pci_databases_add_command_parameters_info_terraform_nodes_network_id": "OpenStack private network ID",
   "pci_databases_add_command_parameters_info_terraform_nodes_subnet_id": "Subnet ID"
