--- a/packages/manager/modules/pci/src/projects/project/ai-dashboard/tabs/users-tokens/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/ai-dashboard/tabs/users-tokens/translations/Messages_en_GB.json
@@ -1,6 +1,6 @@
 {
   "pci_ai_dashboard_users_tokens_title": "Authentication and secure access",
-  "pci_ai_dashboard_users_tokens_description": "Your data and business security is paramount, which is why you are required to provide additional authentication when using AI Tools.",
+  "pci_ai_dashboard_users_tokens_description": "Your data and business security is paramount. This is why you are required to provide additional authentication when using AI Tools.",
   "pci_ai_dashboard_users_tokens_users_title": "Manage access with Public Cloud users",
   "pci_ai_dashboard_users_tokens_users_description_1": "When you work with our tools, you need to authenticate yourself through common users in your Public Cloud project.",
   "pci_ai_dashboard_users_tokens_users_description_2": "Public Cloud users allow you to access your notebooks, jobs and applications. In order to freely experiment, you must choose at least an “Admin” or “AI” role.",
@@ -9,7 +9,7 @@
   "pci_ai_dashboard_users_tokens_tokens_title": "Manage access via application tokens",
   "pci_ai_dashboard_users_tokens_tokens_description_1": "Tokens are used as unique authenticators. They allow you to access your notebooks, jobs and apps in a granular way, for example by selecting by label.",
   "pci_ai_dashboard_users_tokens_tokens_description_2": "Tokens are specific to each AI Tool.",
-  "pci_ai_dashboard_users_tokens_tokens_table_name": "Surname",
+  "pci_ai_dashboard_users_tokens_tokens_table_name": "Name",
   "pci_ai_dashboard_users_tokens_tokens_table_labels_selector": "Label Selector",
   "pci_ai_dashboard_users_tokens_tokens_table_region": "Region",
   "pci_ai_dashboard_users_tokens_tokens_table_role": "Role",
