Revert "fix(i18n): add missing translations [CDS 2166]"
This reverts commit 4140cad4dfa7896c808f96628cd247903f865300.

Signed-off-by: Anoop <anoop.n@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/additional-ips/components/terminate/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/additional-ips/components/terminate/translations/Messages_pt_PT.json
@@ -1,5 +1,5 @@
 {
-  "pci_additional_ips_floating_ips_floating_ip_terminate_title": "Deseja realmente eliminar o Floating IP {{ ip }}?",
+  "pci_additional_ips_floating_ips_floating_ip_terminate_title": "Quer mesmo eliminar este Floating IP {{ ip }}?",
   "pci_additional_ips_floating_ips_floating_ip_terminate_confirm": "Confirmar",
   "pci_additional_ips_floating_ips_floating_ip_terminate_cancel": "Anular",
   "pci_additional_ips_floating_ips_floating_ip_terminate_success_info": "O endereço IP {{ ip }} foi eliminado com êxito.",
