--- a/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_it_IT.json
@@ -34,10 +34,10 @@
   "pci_projects_project_instances_add_privateNetwork_info1": "La modalità “Public” è selezionata di default e corrisponde al modello di rete classico. Potrebbe non essere compatibile con tutti i servizi e non essere disponibile in tutte le Region.",
   "pci_projects_project_instances_add_privateNetwork_public_mode": "Modalità Public",
   "pci_projects_project_instances_add_privateNetwork_public_mode_description1": "È il modello di rete classico delle istanze Public Cloud. Le istanze avranno una porta di rete pubblica collegata.",
-  "pci_projects_project_instances_add_privateNetwork_public_mode_description2": "Ti ricordiamo che questa modalità non è compatibile con i nuovi servizi di rete (Load Balancer o Floating IP).",
+  "pci_projects_project_instances_add_privateNetwork_public_mode_description2": "Ricordiamo che questa modalità non è compatibile con i nuovi servizi di rete (Load Balancer o Floating IP).",
   "pci_projects_project_instances_add_privateNetwork_private_mode": "Modalità Privata",
   "pci_projects_project_instances_add_privateNetwork_private_mode_description1": "Le istanze saranno associate esclusivamente a una rete privata. Questa rete può essere completamente privata oppure esposta su Internet tramite i servizi Gateway o Load Balancer con i Floating IP.",
-  "pci_projects_project_instances_add_privateNetwork_private_mode_description2": "Ti ricordiamo che per eseguire un accesso SSH da Internet è necessario un Floating IP o un'altra istanza (chiamata SSH-Proxy).",
+  "pci_projects_project_instances_add_privateNetwork_private_mode_description2": "Ricordiamo che per eseguire un accesso SSH da Internet è necessario un Floating IP o un'altra istanza (chiamata SSH-Proxy).",
   "pci_projects_project_instances_add_privateNetwork_label": "Selezionare una rete privata",
   "pci_projects_project_instances_add_privateNetwork_placeholder": "Selezionare una rete privata",
   "pci_projects_project_instances_add_privateNetwork_none": "Nessuna",
@@ -46,7 +46,7 @@
   "pci_projects_project_instances_add_privateNetwork_gateway_detectected_banner_info1": "Abbiamo rilevato un servizio Gateway all'interno della rete privata selezionata. Questa rete non è compatibile con la modalità scelta e potrebbero quindi verificarsi comportamenti inattesi.",
   "pci_projects_project_instances_add_privateNetwork_gateway_detectected_banner_info2": "Per connettere un'istanza a questa rete privata è necessario selezionare la <strong>modalità privata</strong>.",
   "pci_projects_project_instances_add_attch_floating_ip_checkbox_label": "Associare un Floating IP a questa istanza",
-  "pci_projects_project_instances_add_attch_floating_ip_checkbox_description": "Per accedere a un'istanza in modalità privata è possibile associarla a un Floating IP, selezionandolo dalla lista o creandone uno nuovo se necessario.",
+  "pci_projects_project_instances_add_attch_floating_ip_checkbox_description": "Per accedere a un'istanza in modalità privata, è possibile associarle un Floating IP selezionandolo dalla lista o creandone uno nuovo se necessario.",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description1": "L'istanza resterà privata e sarà possibile accedervi solo se risulta associato un indirizzo Floating IP o se nella rete è disponibile un'istanza SSH-Proxy.",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description2": "Per ulteriori informazioni, ",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description3": "consulta questa guida.",
