fix(i18n): add missing translations [CDS 2176]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/container/src/public/translations/navbar/Messages_de_DE.json
+++ b/packages/manager/apps/container/src/public/translations/navbar/Messages_de_DE.json
@@ -12,5 +12,6 @@
   "navbar_notifications": "Benachrichtigungen",
   "navbar_language_change": "Sprache des Interface ändern",
   "navbar_account": "Mein Account",
-  "navbar_search": "Suchen"
+  "navbar_search": "Suchen",
+  "navbar_menu_name": "Hauptmenü"
 }
