--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_pl_PL.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_pl_PL.json
@@ -152,5 +152,9 @@
   "sidebar_telephony_type_sip": "SIP",
   "sidebar_telephony_type_fax": "Faks",
   "sidebar_pci_volume_backup": "Volume Backup",
-  "sidebar_vmware_all": "Wszystkie moje usługi"
+  "sidebar_vmware_all": "Wszystkie moje usługi",
+  "sidebar_description": "Menu moich usług",
+  "sidebar_load_services": "Pobieranie usług",
+  "sidebar_access_list": "Dostęp do listy",
+  "sidebar_access_dashboard": "Dostęp do interfejsu"
 }
