--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_pt_PT.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_pt_PT.json
@@ -152,5 +152,9 @@
   "sidebar_telephony_type_sip": "SIP",
   "sidebar_telephony_type_fax": "Fax",
   "sidebar_pci_volume_backup": "Volume Backup",
-  "sidebar_vmware_all": "Todos os meus serviços"
+  "sidebar_vmware_all": "Todos os meus serviços",
+  "sidebar_description": "Menu dos meus serviços",
+  "sidebar_load_services": "Carregar os serviços",
+  "sidebar_access_list": "Aceder à lista",
+  "sidebar_access_dashboard": "Aceder ao painel de controlo"
 }
