--- a/packages/manager/apps/container/src/public/translations/navbar/Messages_pt_PT.json
+++ b/packages/manager/apps/container/src/public/translations/navbar/Messages_pt_PT.json
@@ -12,5 +12,6 @@
   "navbar_notifications": "Notificações",
   "navbar_language_change": "Alterar o idioma da interface",
   "navbar_account": "A minha conta",
-  "navbar_search": "Pesquisar"
+  "navbar_search": "Pesquisar",
+  "navbar_menu_name": "Menu principal"
 }
