--- a/packages/manager/modules/pci/src/projects/project/storages/databases/components/flavors-list/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/components/flavors-list/translations/Messages_en_GB.json
@@ -5,5 +5,6 @@
   "pci_database_flavors_list_header_price_hour": "Cost/hour/node (estimated)",
   "pci_database_flavors_list_header_price_month": "Cost/month/node (estimated)",
   "pci_database_flavors_list_storage_range": "From {{min}} to {{max}}",
-  "pci_database_flavors_list_table_description": "List of node types"
+  "pci_database_flavors_list_table_description": "List of node types",
+  "pci_database_flavors_list_current_offer": "Current solution"
 }
