--- a/packages/manager/modules/pci/src/projects/project/storages/databases/components/flavors-list/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/components/flavors-list/translations/Messages_pt_PT.json
@@ -5,5 +5,6 @@
   "pci_database_flavors_list_header_price_hour": "Custo/hora/nó (estimado)",
   "pci_database_flavors_list_header_price_month": "Custo/mês/nó (estimado)",
   "pci_database_flavors_list_storage_range": "De {{min}} a {{max}}",
-  "pci_database_flavors_list_table_description": "Lista dos tipos de nós"
+  "pci_database_flavors_list_table_description": "Lista dos tipos de nós",
+  "pci_database_flavors_list_current_offer": "Oferta atual"
 }
