--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/users/add/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/users/add/translations/Messages_de_DE.json
@@ -27,5 +27,6 @@
   "pci_databases_user_add_input_database": "Datenbank",
   "pci_databases_user_add_error_existing": "Eine ähnliche Rolle wurde bereits hinzugefügt.",
   "pci_databases_user_add_warning_roles_added": "Bitte beachten Sie: Für diesen Nutzer wurde noch keine Rolle konfiguriert. Klicken Sie auf „+“, um das Hinzufügen Ihrer ersten Rolle abzuschließen.",
-  "pci_databases_user_add_configured_roles": "{{nbRoles}} konfigurierte Rolle(n)"
+  "pci_databases_user_add_configured_roles": "{{nbRoles}} konfigurierte Rolle(n)",
+  "pci_databases_users_add_error_username_exist": "Muss einzigartig sein"
 }
