--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/users/add/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/users/add/translations/Messages_pl_PL.json
@@ -27,5 +27,6 @@
   "pci_databases_user_add_input_database": "Database",
   "pci_databases_user_add_error_existing": "Podobna rola została już dodana.",
   "pci_databases_user_add_warning_roles_added": "Uwaga, dla tego użytkownika nie została jeszcze skonfigurowana żadna rola. Kliknij przycisk „+”, aby dokończyć dodawanie pierwszej roli.",
-  "pci_databases_user_add_configured_roles": "Liczba skonfigurowanych ról: {{nbRoles}}"
+  "pci_databases_user_add_configured_roles": "Liczba skonfigurowanych ról: {{nbRoles}}",
+  "pci_databases_users_add_error_username_exist": "Musi być unikalna"
 }
