--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_pl_PL.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_pl_PL.json
@@ -150,5 +150,6 @@
   "sidebar_telephony_type_alias": "Nr",
   "sidebar_telephony_type_sipTrunk": "Trunk",
   "sidebar_telephony_type_sip": "SIP",
-  "sidebar_telephony_type_fax": "Faks"
+  "sidebar_telephony_type_fax": "Faks",
+  "sidebar_pci_volume_backup": "Volume Backup"
 }
