--- a/packages/manager/modules/pci/src/projects/project/storages/blocks/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/blocks/translations/Messages_es_ES.json
@@ -17,5 +17,6 @@
   "pci_projects_project_storages_blocks_snapshot_create_label": "Crear un snapshot",
   "pci_projects_project_storages_blocks_delete_label": "Eliminar",
   "pci_projects_project_storages_blocks_add_label": "Crear un volumen",
-  "pci_projects_project_storages_blocks_id_label": "ID"
+  "pci_projects_project_storages_blocks_id_label": "ID",
+  "pci_projects_project_storages_blocks_create_backup_label": "Crear una copia de seguridad"
 }
