--- a/packages/manager/modules/pci/src/projects/project/storages/blocks/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/blocks/translations/Messages_it_IT.json
@@ -17,5 +17,6 @@
   "pci_projects_project_storages_blocks_snapshot_create_label": "Crea uno Snapshot",
   "pci_projects_project_storages_blocks_delete_label": "Elimina",
   "pci_projects_project_storages_blocks_add_label": "Crea un volume",
-  "pci_projects_project_storages_blocks_id_label": "ID"
+  "pci_projects_project_storages_blocks_id_label": "ID",
+  "pci_projects_project_storages_blocks_create_backup_label": "Crea un backup"
 }
