--- a/packages/manager/modules/pci/src/projects/project/storages/blocks/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/blocks/translations/Messages_pl_PL.json
@@ -17,5 +17,6 @@
   "pci_projects_project_storages_blocks_snapshot_create_label": "Utwórz snapshot",
   "pci_projects_project_storages_blocks_delete_label": "Usuń",
   "pci_projects_project_storages_blocks_add_label": "Utwórz wolumen",
-  "pci_projects_project_storages_blocks_id_label": "ID"
+  "pci_projects_project_storages_blocks_id_label": "ID",
+  "pci_projects_project_storages_blocks_create_backup_label": "Utwórz kopię zapasową"
 }
