fix(i18n): add missing translations [CDS 2186]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_pt_PT.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_pt_PT.json
@@ -149,5 +149,6 @@
   "sidebar_telephony_type_alias": "N.°",
   "sidebar_telephony_type_sipTrunk": "Trunk",
   "sidebar_telephony_type_sip": "SIP",
-  "sidebar_telephony_type_fax": "Fax"
+  "sidebar_telephony_type_fax": "Fax",
+  "sidebar_pci_volume_backup": "Volume Backup"
 }
