fix(i18n): add missing translations [CDS 2187]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/dedicated/client/app/ip/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/ip/translations/Messages_it_IT.json
@@ -220,8 +220,8 @@
   "ip_description_field": "Descrizione",
   "ip_description_new_title": "Aggiungi una descrizione",
   "ip_description_edit_title": "Modifica la descrizione",
-  "ip_edit_or_assosiate_description": "Questa sezione permette di personalizzare le informazioni pubbliche sul blocco IP (informazioni presenti sul database whois).",
-  "ip_edit_or_assosiate_title": "Visualizza/modifica le informazioni sul blocco IP",
+  "ip_edit_or_assosiate_description": "Questa sezione permette di personalizzare le informazioni pubbliche del tuo blocco IP (informazioni presenti sul database Whois).",
+  "ip_edit_or_assosiate_title": "Visualizza/Modifica le informazioni del blocco IP",
   "ip_edit_or_assosiate_network_tab": "Rete",
   "ip_edit_or_assosiate_asso_tab": "Organizzazione",
   "ip_edit_or_assosiate_edit_submit_button": "Modificare",
