--- a/packages/manager/modules/pci/src/projects/project/storages/databases/components/flavors-list/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/components/flavors-list/translations/Messages_es_ES.json
@@ -5,5 +5,6 @@
   "pci_database_flavors_list_header_price_hour": "Precio/hora por nodo (estimado)",
   "pci_database_flavors_list_header_price_month": "Precio/mes por nodo (estimado)",
   "pci_database_flavors_list_storage_range": "De {{min}} a {{max}}",
-  "pci_database_flavors_list_table_description": "Lista de tipos de nodos"
+  "pci_database_flavors_list_table_description": "Lista de tipos de nodos",
+  "pci_database_flavors_list_current_offer": "Producto actual"
 }
