--- a/packages/manager/modules/pci/src/projects/project/storages/containers/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/containers/translations/Messages_de_DE.json
@@ -26,5 +26,7 @@
   "pci_projects_project_storages_containers_toggle_fail": "Ein Fehler ist aufgetreten: {{message}}",
   "pci_projects_project_storages_containers_offer_standard_s3": "Standard - S3",
   "pci_projects_project_storages_containers_switch_to_private_label": "Zu „Private“ wechseln",
-  "pci_projects_project_storages_containers_switch_to_public_label": "Zu „Public“ wechseln"
+  "pci_projects_project_storages_containers_switch_to_public_label": "Zu „Public“ wechseln",
+  "pci_projects_project_storages_containers_swift_containers_load_error": "Bei einem oder mehreren Ihrer Swift-Container ist ein Fehler aufgetreten. Bitte versuchen Sie es später noch einmal.",
+  "pci_projects_project_storages_containers_s3_containers_load_error": "Bei einem oder mehreren Ihrer S3-Container in der Region {{ regions }} ist ein Fehler aufgetreten. Bitte versuchen Sie es später noch einmal."
 }
