--- a/packages/manager/modules/pci/src/projects/project/storages/containers/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/containers/translations/Messages_en_GB.json
@@ -26,5 +26,7 @@
   "pci_projects_project_storages_containers_toggle_fail": "An error has occurred: {{message}}",
   "pci_projects_project_storages_containers_offer_standard_s3": "Standard - S3",
   "pci_projects_project_storages_containers_switch_to_private_label": "Switch to Private",
-  "pci_projects_project_storages_containers_switch_to_public_label": "Switch to Public"
+  "pci_projects_project_storages_containers_switch_to_public_label": "Switch to Public",
+  "pci_projects_project_storages_containers_swift_containers_load_error": "An error has occurred on one or more of your Swift containers. Please try again later.",
+  "pci_projects_project_storages_containers_s3_containers_load_error": "An error has occurred on one or more of your S3 containers in the {{regions}} region. Please try again later."
 }
