--- a/packages/manager/modules/pci/src/projects/project/storages/containers/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/containers/translations/Messages_pl_PL.json
@@ -26,5 +26,7 @@
   "pci_projects_project_storages_containers_toggle_fail": "Wystąpił błąd: {{message}}",
   "pci_projects_project_storages_containers_offer_standard_s3": "Standard - S3",
   "pci_projects_project_storages_containers_switch_to_private_label": "Przejdź do trybu prywatnego",
-  "pci_projects_project_storages_containers_switch_to_public_label": "Przejdź do trybu publicznego"
+  "pci_projects_project_storages_containers_switch_to_public_label": "Przejdź do trybu publicznego",
+  "pci_projects_project_storages_containers_swift_containers_load_error": "Wystąpił błąd na jednym lub kilku kontenerach Swift. Spróbuj ponownie później.",
+  "pci_projects_project_storages_containers_s3_containers_load_error": "Wystąpił błąd na jednym lub kilku kontenerach S3 w regionie {{regions}}. Spróbuj ponownie później."
 }
